--- a/hw2/02-card.css
+++ b/hw2/02-card.css
@@ -1,11 +1,30 @@
 .container {
   width: 300px;
+  border: navy solid 1px;
+  padding: 15px 15px 15px 15px;
+  border-radius: 10px;
 }
+
 
 .image {
   width: 100%;
+  
 }
 
 .btn {
   width: 100%;
+  padding: 14px 16px;
+  background-color:navy;
+  color: white;
+}
+
+.btn:hover {
+  background-color:orange;
+  color:black;
+}
+
+h1 {
+  color:navy;
+  text-align: center;
+  font-weight: bold;
 }
