--- a/hw5/02-beverages.css
+++ b/hw5/02-beverages.css
@@ -7,7 +7,7 @@
   border: 0.5rem solid var(--white);
 }
 
-.figure:hover {
+#figure:hover {
   border: 0.5rem solid var(--purple);
   background-color: var(--purple);
   color: var(--white);
