fixing all feedback reviews

--- a/hw2/01-hello.css
+++ b/hw2/01-hello.css
@@ -13,9 +13,9 @@ img {
   margin: auto;
 }
 
-img {
+/* img {
   border-top-left-radius: 50% 50%;
   border-top-right-radius: 50% 50%;
   border-bottom-right-radius: 50% 50%;
   border-bottom-left-radius: 50% 50%;
-}
+} */
